Revert changes, can pillar/bridge correctly now